--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "^17.0.2",
+    "react-blockly": "^7.0.1",
     "react-dom": "^17.0.2",
     "tailwindcss": "^2.0.1"
   },
@@ -19,6 +20,7 @@
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.2.0",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.1",
     "postcss": "^8.1.10",
     "postcss-loader": "^4.1.0",
